--- a/html/html4.html
+++ b/html/html4.html
@@ -23,6 +23,27 @@
 </div>
 <h2>Lorem.</h2>
 
+<!--h1[style][name][onclick]-->
+<h1 style="" name="" onclick="">Lorem.</h1>
+
+<!--h1[name=son][onclick="handle()"]-->
+<h1 name="son" onclick="handle()"></h1>
+
+
+<!-- () -->
+<!--(h1>lorem1^p>lorem5)*3-->
+<h1>Lorem.</h1>
+<p>Lorem ipsum dolor sit amet.</p>
+<h1>Voluptas.</h1>
+<p>Animi facilis illum itaque laborum?</p>
+<h1>Earum!</h1>
+<p>Dicta dolorem doloribus eius ipsam.</p>
+
+<!-- 태그명 생략하면 div -->
+<div class="head"></div>
+<div id="section1"></div>
+<div id="section2"></div>
+<div id="section3"></div>
 
 
 </body>
